--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Spooky Portfolio</title>
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <h1 class='hello-world'>Hello, World!</h1>
-  </body>
+	<head lang="en">
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Spooky Portfolio</title>
+		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="stylesheet" href="/screen.css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		<header class="name">Dr. Acula's Portfolio</header>
+		<!--Joke noted-->
+		<nav class="non-mobile">
+			<header class="non-mobile-name">Dr. Acula's Portfolio</header>
+			<ul class="main-nav">
+				<li>Home</li>
+				<li>About</li>
+				<li>Work</li>
+				<li>Contact</li>
+			</ul>
+			<p class="contact-button-top">Get in touch</p>
+		</nav>
+
+		<header class="title">
+			I'm a <span class="red-text">web developer</span>, with a passion for
+			night mode.
+		</header>
+		<nav>
+			<ul class="alt-nav">
+				<li><span class="red-text">All</span></li>
+				<li>Web design</li>
+				<li>Digital Design</li>
+				<li>3D Rendering</li>
+				<li class="last-item">Brand Identity</li>
+			</ul>
+		</nav>
+		<main>
+			<section class="photos">
+				<section class="row-1">
+					<img src="/images/image-1.jpg" />
+					<img src="/images/image-2.jpg" />
+				</section>
+				<section class="row-2">
+					<img src="/images/image-3.jpg" />
+					<img src="/images/image-4.jpg" />
+				</section>
+				<section class="row-3">
+					<img src="/images/image-5.jpeg" />
+					<img src="/images/image-6.jpeg" />
+				</section>
+				<section class="row-4">
+					<img src="/images/image-7.jpeg" />
+					<img src="/images/image-8.jpeg" />
+				</section>
+			</section>
+			<section class="photos-desktop">
+				<section class="row-a1">
+					<img src="/images/image-1.jpg" />
+					<img src="/images/image-2.jpg" />
+				</section>
+				<section class="row-a2">
+					<img src="/images/image-3.jpg" />
+					<img src="/images/image-4.jpg" />
+					<img src="/images/image-5.jpeg" />
+				</section>
+				<section class="row-a3">
+					<img src="/images/image-6.jpeg" />
+				</section>
+				<section class="row-a4">
+					<img src="/images/image-7.jpeg" />
+					<img src="/images/image-8.jpeg" />
+				</section>
+			</section>
+		</main>
+		<footer>
+			<section class="final-words">
+				<p>Let's work together</p>
+			</section>
+			<section class="contact-button">
+				<p>Get in touch</p>
+			</section>
+		</footer>
+	</body>
 </html>
